--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <a class="aclass"><span>googIe.com </span>にアクセスできません。</a>
     <br><br><br>
     <a class="aclass">次をお試しください:</p>
-    <li><a class="aclass">googIe.com がタイプミスでないか確認する</a></li><br>
-    <li><a href=# onclick="curs()">プロキシとファイアウォールを確認する</a></li><br>
+    <li><a class="aclass" style="text-decoration: none;">googIe.com がタイプミスでないか確認する</a></li><br>
+    <li><a href=# onclick="curs()" style="text-decoration: none;">プロキシとファイアウォールを確認する</a></li><br>
     <li><a href="network.html" id="windowss">GoogIe ネットワーク診断ツールを実行する</a></li>
   
     <br><br>
