--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     <a class="aclass"><span>googIe.com </span>にアクセスできません。</a>
     <br><br><br>
     <a class="aclass">次をお試しください:</p>
-    <li><a class="aclass" style="text-decoration: none;">googIe.com がタイプミスでないか確認する</a></li><br>
+    <li><a class="aclass" >googIe.com がタイプミスでないか確認する</a></li><br>
     <li><a href=# onclick="curs()" style="text-decoration: none;">プロキシとファイアウォールを確認する</a></li><br>
-    <li><a href="network.html" id="windowss">GoogIe ネットワーク診断ツールを実行する</a></li>
+    <li><a href="network.html" id="windowss" style="text-decoration: none;">GoogIe ネットワーク診断ツールを実行する</a></li>
   
     <br><br>
     <p style="font-size: 80%;">ERR_CONNECTION_CLOSED</p>
